@@ -1,3 +1,11 @@
+2021-07-20  Eric Hutchison  <ehutchison@apple.com>
+
+        Adding myself to Contributors.json.
+
+        Unreviewed.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2021-07-20  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r278062): Misplaced text in Wikipedia search field
